# AI_trade

./: .cspell.json  .env.example  .gitignore  CLAUDE.md  README.md  Sinopac.pfx  backtest.py  bot.py  main.py  minute_backtest.py  optimize.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: shioaji-init.md
.github/workflows/: trading_bot.yml
src/ai_trade/: __init__.py  chips.py  client.py  news.py  scanner.py  strategy.py
